--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Coding Coach">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="/">
+    <meta property="og:image" content="%PUBLIC_URL%/codingcoach-logo.jpg">
+    <meta property="og:description" content="Coding Coach">
+    <meta property="og:site_name" content="https://mentors.codingcoach.io/">
+
+    <!-- Twitter cards -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@codingcoach_io">
+    <meta name="twitter:domain" content="/">
+    <meta name="twitter:creator" content="@codingcoach_io">
+    <meta name="twitter:title" content="Coding Coach">
+    <meta name="twitter:image" content="%PUBLIC_URL%/codingcoach-logo.jpg">
+    <meta name="twitter:description" content="Coding Coach">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-   <title>Coding Coach</title>
+    <title>Coding Coach</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133820299-2"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'UA-133820299-2');
+        gtag('config', 'UA-133820299-2');
     </script>
+</head>
 
-  </head>
-  <body>
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  </body>
+</body>
+
 </html>
