Updated sharing descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="/">
     <meta property="og:image" content="%PUBLIC_URL%/codingcoach-logo.jpg">
-    <meta property="og:description" content="Coding Coach">
+    <meta property="og:description" content="Connecting developers with mentors worldwide.">
     <meta property="og:site_name" content="https://mentors.codingcoach.io/">
 
     <!-- Twitter cards -->
@@ -20,7 +20,7 @@
     <meta name="twitter:creator" content="@codingcoach_io">
     <meta name="twitter:title" content="Coding Coach">
     <meta name="twitter:image" content="%PUBLIC_URL%/codingcoach-logo.jpg">
-    <meta name="twitter:description" content="Coding Coach">
+    <meta name="twitter:description" content="Connecting developers with mentors worldwide.">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
