--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-133820299-2', 'auto');
         
     </script>
     <!-- End Google Analytics -->
