Add meta description

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+    <meta name="Description" content="You want to learn a new skill? Steer away from doubts? Looking for someone to discuss? Coding Coach is here to connect you with mentors worldwide!">
+    
     <!-- Open Graph data -->
     <meta property="og:title" content="Coding Coach">
     <meta property="og:type" content="article">
