Add meta description to improve seo audit to 100% (#250)

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+    <meta name="Description" content="Coding Coach is here to connect mentors and mentees around the world, for free. We believe mentorship should be accessible to all, regardless of circumstance.">
+    
     <!-- Open Graph data -->
     <meta property="og:title" content="Coding Coach">
     <meta property="og:type" content="article">
