Added italic version of Lato. (#275)

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Lato:400,400i" as="font" type="font/woff2" crossOrigin="true">
     <title>Coding Coach</title>
     <!-- Google Analytics -->
     <script>
