add google webmaster-tool verification

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <meta name="Description" content="Coding Coach is here to connect mentors and mentees around the world, for free. We believe mentorship should be accessible to all, regardless of circumstance.">
-    
+    <meta name="google-site-verification" content="FDwgnrh2ftb6shLvseXpn_mH1LNxln2eD7UgE1FSlfg" />
+
     <!-- Open Graph data -->
     <meta property="og:title" content="Coding Coach">
     <meta property="og:type" content="article">
@@ -49,7 +50,7 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-133820299-2', 'auto');
-        
+
     </script>
     <!-- End Google Analytics -->
 </head>
