--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-133820299-2', 'auto');
-
+        ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
 </head>
