--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/favicon/favicon-512x512.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
