--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,13 @@
-<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<link
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Lato:400,400i&subset=latin,latin-ext"
+      as="font"
+      type="font/woff2"
+      crossOrigin="true"
+    />
+<link
+    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossOrigin="true"
+/>
