--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:400,400i"
       as="font"
       type="font/woff2"
-      crossOrigin="true"
+      crossorigin="true"
     />
     <title>Coding Coach</title>
     <!-- Google Analytics -->
@@ -114,6 +114,21 @@
       ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function() {
+        var s1 = document.createElement('script'),
+          s0 = document.getElementsByTagName('script')[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/60a117b2185beb22b30dae86/1f5qk953t';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
   </head>
 
   <body>
