feat: mentorship request (#787)

--- a/public/index.html
+++ b/public/index.html
@@ -82,12 +82,14 @@
       crossorigin="anonymous"
     />
     <link
-      rel="preload"
+      rel="stylesheet"
+      type="text/css"
       href="https://fonts.googleapis.com/css?family=Lato:400,400i"
       as="font"
       type="font/woff2"
       crossorigin="true"
     />
+
     <title>Coding Coach</title>
     <!-- Google Analytics -->
     <script>
